clusters/homelab/core/tekton-pipeline/helm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
  labels:
    gateway.infra.services/allow-routes: "true"
